PSGI::Hector 1.0 -- 22/02/2014

	Initial Release