@@ -41,7 +41,7 @@
    "provides" : {
       "PSGI::Hector" : {
          "file" : "lib/PSGI/Hector.pm",
-         "version" : "1.0"
+         "version" : "1.1"
       },
       "PSGI::Hector::Base" : {
          "file" : "lib/PSGI/Hector/Base.pm"
@@ -80,5 +80,5 @@
          "http://dev.perl.org/licenses/"
       ]
    },
-   "version" : "1.0"
+   "version" : "1.1"
 }
